attempting to fix spacing between profile name and usernam on main menu

--- a/main/static/css/yourbit_core.css
+++ b/main/static/css/yourbit_core.css
@@ -1672,6 +1672,7 @@ only be used for object transforms (shaping and scaling)
         */
             font-size: auto;
             font-weight: 700;
+            padding: 0px;
             grid-row:1;
             grid-column: 2;
         }
